src/objects/Search__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Rule</label>
        <referenceTo>Accounting_Rule_Header__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check</label>
        <referenceTo>Check__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_Operation__c</fullName>
        <label>Day Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Start of Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Voucher Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Reports</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statistical Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodic Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Reports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <picklist>
            <controllingField>Report_Type__c</controllingField>
            <picklistValues>
                <fullName>Loan Portfolio Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary of Key Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Product Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Ledger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profit &amp; Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Savings Product Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACCO Balance Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Aging Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidity ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solvency Ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rca report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Statement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <referenceTo>Savings_Account__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Product</label>
        <referenceTo>Savings_Product__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Source</label>
        <referenceTo>Transaction_Source__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Search</label>
    <nameField>
        <label>Saved Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>